@@ -1,12 +1,8 @@
-fact 5 card 1332, 1333, 1334
+-double check sizing QA for TRS, both whith and without media player
 
--create clone without any cards, deactivate plugin, reload
--don't allow to turn of card type plugin if child exists, even if it has no
- cards.
+-previous font does not get shown correctly. Multiplatform?
 
-- time used_ids = \
-                self.con.execute("select distinct card_type_id from cards")
-
+-time used_ids = self.con.execute("select distinct card_type_id from cards")
 
 -sync bug
 Traceback (innermost last):
@@ -17,11 +13,13 @@ for event, element in context:
 File "<string>", line 91, in next
 ParseError: not well-formed (invalid token): line 14, column 36
 
+-don't allow to turn off card type plugin if child exists, even if it has no
+ cards.
+-test for create clone without any cards, deactivate plugin, reload?
 
--double check sizing QA for TRS
+-cr lf issue when importing from TRS?
 
--tmp activate to only study certain tags, then going back to default erases all
- tags
+-revisit format proxy for sentences
 
 -update docs on cloze card type and sentence card type, cloze entire sentence
 
@@ -29,11 +27,10 @@ ParseError: not well-formed (invalid token): line 14, column 36
 
 -RTL marker adding in card browser
 
--previous font does not get shown correctly
-
 -save set: drop down box with previous sets?
 
--after TRS, text sync got permission denied
+
+Release 1.0.1
 
 -with full sync, option to skip media sync
 
